--- a/index.html
+++ b/index.html
@@ -1,237 +1,12 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="es">
 <head>
-  <meta charset="utf-8" />
-  <meta name="viewport" content="width=device-width,initial-scale=1" />
-  <title>IPROGO — Automatización Industrial</title>
-  <link rel="preconnect" href="https://fonts.googleapis.com">
-  <link rel="preconnect" href="https://fonts.gstatic.com" crossorigin>
-  <link href="https://fonts.googleapis.com/css2?family=Orbitron:wght@400;700&family=Inter:wght@300;400;600&display=swap" rel="stylesheet">
-  <style>
-    :root{
-      --bg:#0f0f10;
-      --card:#121212;
-      --blue:#1fb2ff;
-      --muted:#9aa0a6;
-      --accent:#0fb0ff;
-      --glass: rgba(255,255,255,0.03);
-    }
-
-    *{box-sizing:border-box}
-    html,body{height:100%;margin:0;font-family:Inter,system-ui,Segoe UI,Roboto,"Helvetica Neue",Arial;
-      background-image: url('bg-pattern.png');
-      background-size: cover;
-      background-attachment: fixed;
-      background-position: center;
-      background-repeat: no-repeat;
-      background-color: var(--bg);
-      color:#e6eef8
-    }
-
-    a{color:inherit;text-decoration:none}
-
-    header{display:flex;align-items:center;justify-content:space-between;padding:18px 28px;background:var(--bg);position:sticky;top:0;z-index:40}
-    .brand{display:flex;align-items:center;gap:12px}
-    .brand img{width:64px;height:64px;object-fit:contain}
-    .brand h1{font-family:Orbitron,system-ui;font-size:20px;margin:0;color:var(--blue);letter-spacing:1px}
-
-    nav{display:flex;gap:18px;align-items:center}
-    nav a{color:var(--muted);font-weight:600}
-    .cta{background:linear-gradient(90deg,var(--blue),#00c0ff);padding:10px 14px;border-radius:10px;color:#051018;font-weight:700}
-
-    /* Banderas */
-    .lang-switch {
-      display: flex;
-      gap: 10px;
-      margin-left: 25px;
-    }
-    .flag {
-      width: 32px;
-      height: 32px;
-      cursor: pointer;
-      border-radius: 4px;
-      transition: transform .2s, opacity .2s;
-    }
-    .flag:hover {
-      transform: scale(1.08);
-      opacity: 0.8;
-    }
-
-    .container{max-width:1120px;margin:0 auto;padding:0 20px}
-    main{background: linear-gradient(180deg, rgba(15,15,16,0.95) 0%, rgba(7,7,7,0.98) 100%);min-height: 100vh;padding-top: 30px;}
-
-    .hero{display:grid;grid-template-columns:1fr 480px;gap:28px;align-items:center}
-    .hero .copy h2{font-family:Orbitron,system-ui;font-size:36px;margin:0 0 12px;color:var(--blue)}
-    .hero p{color:var(--muted);margin:0 0 18px}
-    .hero .controls{display:flex;gap:12px}
-    .btn{background:var(--glass);border:1px solid rgba(255,255,255,0.04);padding:12px 16px;border-radius:10px;font-weight:600}
-    .btn.primary{background:linear-gradient(90deg,var(--blue),#00c0ff);color:#051018;border:none}
-
-    .mock{background:linear-gradient(180deg,rgba(255,255,255,0.02),transparent);border-radius:12px;padding:18px;display:flex;justify-content:center;align-items:center}
-    .mock img{max-width:100%;height:auto;border-radius:8px}
-
-    /* Carousel */
-    .service-carousel{display:flex;overflow-x:scroll;scroll-snap-type:x mandatory;padding-bottom:20px;gap:20px;margin-top:28px;margin-left:calc(-1 * 20px);margin-right:calc(-1 * 20px);padding-left:20px;padding-right:20px;}
-    .card{flex-shrink:0;width:320px;height:400px;border-radius:12px;scroll-snap-align:start;background-color:var(--card);background-size:cover;background-position:center;background-repeat:no-repeat;position:relative;overflow:hidden;border:1px solid rgba(255,255,255,0.08);transition:transform 0.2s;}
-    .card:hover{transform:translateY(-5px)}
-    .card-content{position:absolute;bottom:0;left:0;right:0;padding:24px 18px;background:linear-gradient(0deg,rgba(0,0,0,0.95) 0%,rgba(0,0,0,0.0) 100%);color:#fff;height:100%;display:flex;flex-direction:column;justify-content:flex-end;}
-    .card h3{margin:0 0 8px;color:var(--blue);font-size:20px;font-family:Orbitron}
-    .card p{margin:0;color:#e6eef8;font-size:14px}
-
-    .card.analisis{background-image:url('analisis.png')}
-    .card.mantenimiento{background-image:url('soporte.png')}
-    .card.i40{background-image:url('icono-i40.png')}
-    .card.robotica{background-image:url('icono-robot.png')}
-
-    .projects{margin-top:70px}
-    .project-grid{display:grid;grid-template-columns:repeat(auto-fit,minmax(260px,1fr));gap:14px}
-    .project{background:var(--card);padding:14px;border-radius:10px}
-    .project h4{margin:0 0 6px;color:var(--blue)}
-    .project p{margin:0;color:var(--muted);font-size:13px}
-
-    .two-col{display:grid;grid-template-columns:1fr 360px;gap:18px;margin-top:70px}
-    footer{margin-top:50px;padding:28px 0;color:var(--muted);text-align:center}
-
-    @media(max-width:980px){.hero{grid-template-columns:1fr}.two-col{grid-template-columns:1fr}header{padding:12px}.brand img{width:56px;height:56px}}
-    @media(max-width:768px){.card{width:80vw;max-width:400px}}
-
-    .muted{color:var(--muted)}
-    .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(255,255,255,0.02);font-weight:700}
-    .whatsapp{position:fixed;right:18px;bottom:18px;background:var(--blue);color:#041018;padding:12px 14px;border-radius:999px;font-weight:800;box-shadow:0 6px 18px rgba(0,0,0,0.6)}
-  </style>
+  <meta charset="UTF-8">
+  <title>PRUEBA IPROGO</title>
 </head>
-<body>
-  <header class="container">
-    <div class="brand">
-      <img src="IPROGO.png" alt="IPROGO logo">
-      <h1>IPROGO</h1>
-    </div>
-
-    <nav>
-      <a href="#servicios" data-translate="nav_servicios">Servicios</a>
-      <a href="#proyectos" data-translate="nav_proyectos">Proyectos</a>
-      <a href="#nosotros" data-translate="nav_nosotros">Nosotros</a>
-      <a href="#contacto" class="cta" data-translate="nav_contacto">Contacto</a>
-
-      <div class="lang-switch">
-        <img src="mx.png" id="lang-es" class="flag" title="Español">
-        <img src="us.png" id="lang-en" class="flag" title="English">
-      </div>
-    </nav>
-  </header>
-
-  <main class="container">
-    <section class="hero">
-      <div class="copy">
-        <span class="pill" data-translate="hero_tag">Integración · PLC · SCADA</span>
-
-        <h2 data-translate="hero_title">Automatización industrial inteligente para plantas inteligentes</h2>
-
-        <p data-translate="hero_desc">Implementamos, programamos y ponemos en marcha soluciones con PLC, HMI, ROBOT y SCADA que aumentan la disponibilidad y eficiencia de tus líneas de producción.</p>
-
-        <div class="controls">
-          <a class="btn primary" href="#contacto" data-translate="hero_btn_quote">Solicitar cotización</a>
-          <a class="btn" href="#proyectos" data-translate="hero_btn_projects">Ver proyectos</a>
-        </div>
-
-        <div style="margin-top:18px;color:var(--muted);font-size:14px" data-translate="hero_protocolos">Trabajamos con Profinet, Ethernet/IP, Modbus y los principales fabricantes de PLC.</div>
-      </div>
-
-      <div class="mock">
-        <img src="IPROGO.png" alt="IPROGO mock">
-      </div>
-    </section>
-
-    <section id="servicios" style="margin-top:70px">
-      <h3 style="color:var(--blue);margin:0 0 10px;font-family:Orbitron" data-translate="servicios_title">Nuestros servicios</h3>
-
-      <div class="service-carousel">
-        <a class="card analisis" href="servicio-analisis.html">
-          <div class="card-content">
-            <h3 data-translate="serv_analisis_title">Análisis de mejora de productividad</h3>
-            <p data-translate="serv_analisis_desc">Evaluación de procesos y equipos para identificar cuellos de botella y oportunidades de optimización.</p>
-          </div>
-        </a>
-
-        <a class="card mantenimiento" href="servicio-mantenimiento.html">
-          <div class="card-content">
-            <h3 data-translate="serv_mantenimiento_title">Mantenimiento y soporte</h3>
-            <p data-translate="serv_mantenimiento_desc">Servicios preventivos, predictivos y soporte remoto 24/7 para minimizar tiempos de inactividad.</p>
-          </div>
-        </a>
-
-        <a class="card i40" href="servicio-i40.html">
-          <div class="card-content">
-            <h3 data-translate="serv_i40_title">Integración Industria 4.0</h3>
-            <p data-translate="serv_i40_desc">Implementamos soluciones de IoT Industrial (IIoT), Cloud y Edge Computing para la toma de decisiones basada en datos.</p>
-          </div>
-        </a>
-
-        <a class="card robotica" href="servicio-plc.html">
-          <div class="card-content">
-            <h3 data-translate="serv_robot_title">PLC's, Robots, Bases de Datos y Más!</h3>
-            <p data-translate="serv_robot_desc">Soluciones de programación e integración de sistemas PLC, brazos robóticos, bases de datos SQL/NoSQL y sistemas de trazabilidad.</p>
-          </div>
-        </a>
-      </div>
-    </section>
-
-    <section id="proyectos" class="projects">
-      <h3 style="color:var(--blue);margin:0 0 10px;font-family:Orbitron">Proyectos</h3>
-      <div class="project-grid">
-        <div class="project">
-          <h4>Integración línea de envasado</h4>
-          <p class="muted">Programación de PLC y HMI, sincronización con variadores y sensores. Resultado: 18% más rendimiento.</p>
-        </div>
-        <div class="project">
-          <h4>Migración de PLC obsoleto</h4>
-          <p class="muted">Sustitución de control legacy por arquitectura moderna con red Profinet y redundancia.</p>
-        </div>
-        <div class="project">
-          <h4>Puesta en marcha SCADA</h4>
-          <p class="muted">Visualización y alarmas centrales para control de planta y telemetría básica.</p>
-        </div>
-      </div>
-    </section>
-
-    <section class="two-col" id="nosotros">
-      <div>
-        <h3 style="color:var(--blue);margin:0 0 10px;font-family:Orbitron">Sobre IPROGO</h3>
-        <p class="muted">IPROGO es una integradora industrial especializada en soluciones con PLC, HMI y SCADA. Nuestra misión es reducir paradas no planificadas y optimizar procesos productivos mediante tecnología robusta y prácticas de ingeniería probadas.</p>
-
-        <h4 style="margin-top:18px;color:var(--blue)">Por qué elegirnos</h4>
-        <ul class="muted">
-          <li>Equipo con experiencia en industria manufacturera</li>
-          <li>Protocolos industriales y ciberseguridad básica aplicada</li>
-          <li>Documentación y capacitación al cliente</li>
-        </ul>
-      </div>
-
-      <aside id="contacto" style="background:var(--card);padding:18px;border-radius:12px">
-        <h3 style="color:var(--blue);margin:0 0 10px;font-family:Orbitron" data-translate="contacto_title">Contacto</h3>
-        <p class="muted" data-translate="contacto_desc">Déjanos tus datos y te contactamos para evaluar tu proyecto.</p>
-        <form>
-          <div style="display:flex;flex-direction:column;gap:10px">
-            <input id="name" type="text" placeholder="Nombre" required>
-            <input id="company" type="text" placeholder="Empresa">
-            <input id="email" type="email" placeholder="Correo" required>
-            <input id="phone" type="tel" placeholder="Teléfono / WhatsApp">
-            <textarea id="message" rows="4" placeholder="Descripción del proyecto"></textarea>
-            <button class="btn primary" data-translate="contacto_btn">Enviar solicitud</button>
-          </div>
-        </form>
-        <p class="muted" style="font-size:12px;margin-top:8px" data-translate="contacto_wp">O escríbenos por WhatsApp</p>
-        <a id="waLink" class="btn" href="https://wa.me/524426687642" target="_blank">WhatsApp</a>
-      </aside>
-    </section>
-
-    <footer>
-      <div class="muted" data-translate="footer_text">© IPROGO — Integración Industrial · PLC · HMI · SCADA</div>
-    </footer>
-  </main>
-
-  <a href="https://wa.me/524426687642" target="_blank" class="whatsapp">WhatsApp</a>
-
-  <script src="lang.js"></script>
+<body style="background:black;color:lime;font-family:monospace;text-align:center;padding-top:20vh;">
+  <h1>✅ IPROGO – PRUEBA GITHUB PAGES</h1>
+  <p>Si ves esto, GitHub Pages está funcionando.</p>
+  <p>Fecha: <strong>2025-PRUEBA-1</strong></p>
 </body>
 </html>
