--- a/index.html
+++ b/index.html
@@ -98,6 +98,24 @@
     .muted{color:var(--muted)}
     .pill{display:inline-block;padding:6px 10px;border-radius:999px;background:rgba(255,255,255,0.02);font-weight:700}
     .whatsapp{position:fixed;right:18px;bottom:18px;background:var(--blue);color:#041018;padding:12px 14px;border-radius:999px;font-weight:800;box-shadow:0 6px 18px rgba(0,0,0,0.6)}
+.whatsapp-inline{
+  display:flex;
+  align-items:center;
+  gap:10px;
+  background:linear-gradient(90deg,#25D366,#1ebe5d);
+  color:#041018;
+  font-weight:800;
+  justify-content:center;
+  margin-top:10px;
+}
+
+.whatsapp-inline svg{
+  width:20px;
+  height:20px;
+  fill:#041018;
+}
+
+    
   </style>
 </head>
 <body>
@@ -220,8 +238,17 @@
             <button class="btn primary" data-translate="contacto_btn">Enviar solicitud</button>
           </div>
         </form>
-        <p class="muted" style="font-size:12px;margin-top:8px" data-translate="contacto_wp">O escríbenos por WhatsApp</p>
-        <a id="waLink" class="btn" href="https://wa.me/524426687642" target="_blank">WhatsApp</a>
+        <p class="muted" style="font-size:12px;margin-top:8px" data-translate="contacto_wp">  O escríbenos por WhatsApp</p>
+        <a id="waLink" class="btn whatsapp-inline"
+           href="https://wa.me/524426687642"
+           target="_blank"
+           aria-label="Contactar por WhatsApp">
+            <svg viewBox="0 0 32 32" aria-hidden="true">
+            <path d="M16 .3C7.3.3.3 7.3.3 16c0 2.8.7 5.6 2.2 8.1L0 32l8.1-2.1c2.4 1.3 5.1 2 7.9 2h.1c8.8 0 15.9-7.1 15.9-15.9S24.8.3 16 .3zm0 29c-2.5 0-4.9-.7-7-1.9l-.5-.3-4.8 1.3 1.3-4.6-.3-.5C3.4 21 2.7 18.5 2.7 16 2.7 8.8 8.8 2.7 16 2.7S29.3 8.8 29.3 16 23.2 29.3 16 29.3zm8-9.6c-.4-.2-2.3-1.1-2.7-1.2-.4-.1-.7-.2-1 .2-.3.4-1.2 1.2-1.5 1.5-.3.2-.5.3-.9.1-.4-.2-1.7-.6-3.3-2-1.2-1-2-2.3-2.2-2.7-.2-.4 0-.6.2-.8.2-.2.4-.5.6-.7.2-.2.3-.4.4-.7.1-.2 0-.5 0-.7-.1-.2-1-2.4-1.4-3.2-.4-.8-.8-.7-1-.7h-.9c-.3 0-.7.1-1 .4s-1.3 1.3-1.3 3.1 1.3 3.6 1.5 3.8c.2.2 2.6 4 6.3 5.6.9.4 1.6.6 2.2.8.9.3 1.7.3 2.3.2.7-.1 2.3-.9 2.6-1.8.3-.9.3-1.7.2-1.8-.1-.2-.4-.3-.8-.5z"/>
+            </svg>
+          <span>WhatsApp</span>
+        </a>
+
       </aside>
     </section>
 
@@ -235,3 +262,4 @@
   <script src="lang.js"></script>
 </body>
 </html>
+
